--- a/templates/base.html
+++ b/templates/base.html
@@ -41,8 +41,10 @@
     {% for message in get_flashed_messages() %}
         <div class="flash">{{ message }}</div>
     {% endfor %}
-    {% block content %}
-    {% endblock %}
+    <div class="container">
+      {% block content %}
+      {% endblock %}
+    </div>
   </main>
     <div class="app-footer anchor">
     <footer>
