--- a/templates/form.html
+++ b/templates/form.html
@@ -1,7 +1,58 @@
 {% extends "base.html" %}
 
 {% block content %}
-    
-<h1>Form Page</h1>
+ 
+<div class="form-container">
+
+    <h1 class="title">Enter a Plan</h1>
+
+    <form>
+
+        <div class="form-group">
+            <label for="ap-number-input">AP Number</label>
+            <div id="ap-number-input">
+                <input type="text">
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label for="package-input">Package</label>
+            <span class="required-label">(required)</span>
+            <select name="package-input" id="package-input">
+                <option value="roll">Roll</option>
+                <option value="flat">Flat</option>
+            </select>
+        </div>
+
+        <div class="form-group">
+            <label for="location-input">Location</label>
+            <span class="required-label">(required)</span>
+            <select name="location-input" id="location-input">
+                <option value="bins">Bins</option>
+                <option value="large-plan">Large Plan</option>
+                <option value="zoning">Zoning</option>
+                <option value="electrical">Electrical</option>
+                <option value="plumbing">Plumbing</option>
+            </select>
+        </div>
+
+        <div class="form-group">
+            <label for="multiple-app-input">Multiple Applications?</label>
+            <span class="required-label">(required)</span>
+            <select name="location-input" id="location-input">
+                <option value="yes">Yes</option>
+                <option value="no">No</option>
+            </select>
+        </div>
+
+        <div class="pull-right">
+            <button class="btn btn-secondary submit-button">
+                <span>Submit</span>
+            </button>
+        </div>
+
+    </form>
+
+</div>
 
 {% endblock %}
