--- a/templates/index.html
+++ b/templates/index.html
@@ -2,16 +2,26 @@
 
 {% block content %}
     
-    <div>
+    <div class="index-container">
         <a href="{{ url_for('search') }}">
-            <button>
-                Search for a Plan
-            </button>
+            <div class="index-button">
+                <div>
+                    <i class="fa fa-address-book fa-5x" aria-hidden="true"></i>
+                </div>
+                <div>
+                    <h2>Search for a Plan</h2>
+                </div>
+            </div>
         </a>
         <a href="{{ url_for('form') }}">
-            <button>
-                Enter a Plan
-            </button>
+            <div class="index-button">
+                <div>
+                    <i class="fa fa-plus-square-o fa-5x" aria-hidden="true"></i>
+                </div>
+                <div>
+                    <h2>Enter a Plan</h2>
+                </div>
+            </div>
         </a>
     </div>
 
