--- a/static/styles.css
+++ b/static/styles.css
@@ -73,6 +73,7 @@
     width: 40%;
     margin-left: 30%;
     margin-right: 30%;
+    margin-top: 1em;
     margin-bottom: 1em;
     padding-top: 5px;
     padding-bottom: 5px;
