--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Concourse Plan Form | City of Philadelphia</title>
+  <title>Permit Plan Form | City of Philadelphia</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
   <link rel="stylesheet" type="text/css" href="https://unpkg.com/phila-standards@0.11.2/dist/css/phila-app.min.css">
   <link rel="stylesheet" href="static/font-awesome-4.7.0/css/font-awesome.min.css">
@@ -31,7 +31,7 @@
         </a>
         <div class="app-divide"></div>
         <div class="page-title-container">
-          <h1 class="page-title">Concourse Plan Form</h1>
+          <h1 class="page-title">Permit Plan Form</h1>
           <h2 class="page-subtitle">For Internal Use Only</h2>
         </div>
       </div>
