Form now works aside for validating the address of the apno entered

--- a/static/styles.css
+++ b/static/styles.css
@@ -130,3 +130,13 @@
     width: 40%;
     margin: auto;
 }
+
+/* Form Page */
+.form-label {
+    display: inline-block;
+}
+
+#add-apno-button {
+    cursor: pointer;
+    float: right;
+}
