--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" type="text/css" href="https://unpkg.com/phila-standards@0.11.2/dist/css/phila-app.min.css">
   <link rel="stylesheet" href="static/font-awesome-4.7.0/css/font-awesome.min.css">
   <link rel="shortcut icon" type="image/x-icon" href="https://standards.phila.gov/img/favicon.png"> <meta name="twitter:card" content="summary">
+  {% block assets %}{% endblock %}
 <meta property="og:title" content=""> 
 <meta property="og:description" content=""> 
 <meta property="og:type" content="website">
@@ -26,14 +27,16 @@
     <div class="row expanded">
       <!-- if you don't want a full-width header, remove the expanded class -->
       <div class="columns">
-        <a href="http://beta.phila.gov/" class="logo">
+        <a href="{{ url_for('index') }}" class="logo">
           <img src="https://standards.phila.gov/img/logo/city-of-philadelphia-yellow-white.png" alt="City of Philadelphia">
         </a>
         <div class="app-divide"></div>
-        <div class="page-title-container">
-          <h1 class="page-title">Permit Plan Form</h1>
-          <h2 class="page-subtitle">For Internal Use Only</h2>
-        </div>
+          <div class="page-title-container">
+            <a href="{{ url_for('index') }}">
+              <h1 class="page-title">Permit Plan Form</h1>
+              <h2 class="page-subtitle">For Internal Use Only</h2>
+            </a>
+          </div>
       </div>
     </div>
   </header>
