--- a/templates/form.html
+++ b/templates/form.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
+{% block assets %}
+<script src="{{ url_for('static', filename='form.js') }}"></script>
+{% endblock %}
+
 {% block content %}
  
 <div class="form-container">
@@ -9,25 +13,25 @@
     <form action="{{ url_for('form') }}" method="post">
 
         <div class="form-group">
-            <label for="ap-number-input">AP Number</label>
-            <span class="required-label">(required)</span>
-            <div id="ap-number-input">
-                <input type="text" name="apno-input">
+            <div>
+                <label for="ap-number-input" class="form-label" >AP Number</label>
+                <span class="required-label form-label">(required, click the add button to enter multiple)</span>
+                <div id="add-apno-button" class="form-label">
+                    <i class="fa fa-plus-circle fa-lg" aria-hidden="true"></i>
+                </div>
+            </div>
+            <div id="ap-number-input-list">
+                <div id="ap-number-input">
+                    <input type="text" name="apno-input">
+                </div>
             </div>
         </div>
 
         <div class="form-group">
-            <label for="multiple-app-input">Multiple Applications?</label>
-            <span class="required-label">(required)</span>
-            <select name="location-input" id="location-input">
-                <option value="yes">Yes</option>
-                <option value="no">No</option>
-            </select>
-        </div>
-
-        <div class="form-group">
-            <label for="package-input">Package</label>
-            <span class="required-label">(required)</span>
+            <div>
+                <label for="package-input" class="form-label" >Package</label>
+                <span class="required-label form-label">(required)</span>
+            </div>
             <select name="package-input" id="package-input">
                 <option value="roll">Roll</option>
                 <option value="flat">Flat</option>
@@ -35,8 +39,10 @@
         </div>
 
         <div class="form-group">
-            <label for="location-input">Location</label>
-            <span class="required-label">(required)</span>
+            <div>
+                <label for="location-input" class="form-label">Location</label>
+                <span class="required-label form-label">(required)</span>
+            </div>
             <select name="location-input" id="location-input">
                 <option value="bins">Bins</option>
                 <option value="large-plan">Large Plan</option>
@@ -47,8 +53,10 @@
         </div>
 
         <div class="form-group">
-            <label for="sheet-number-input">Number of Sheets</label>
-            <span class="required-label">(required)</span>
+            <div>
+                <label for="sheet-number-input" class="form-label">Number of Sheets</label>
+                <span class="required-label form-label">(required)</span>
+            </div>
             <input name="sheet-number-input" type="number" min="0" max="10000" step="1" value="1"/>
         </div>
 
