--- a/templates/search.html
+++ b/templates/search.html
@@ -5,6 +5,7 @@
 <div class="search-container">
 
     {% if permit %}
+        <h1 class="title">Search Results</h2>
         <h2 class="title">Permit Information</h2>
         <table class="table" id="permit-table">
             <th>AP Number</th>
@@ -34,10 +35,12 @@
     {% if plans %}
         <h2 class="title">Plan Information</h2>
             {% for plan in plans %}
+                <h3 class="title">Plan #{{ loop.index0 + 1 }}</h3>
                 <table class="table" id="plan-table">
                     <th>Package</th>
                     <th>Location</th>
                     <th>Number of Sheets</th>
+                    <th>AP Numbers Linked to this Plan</th>
                     <tr>
                         <td>
                             {{ plan.package|capitalize }}
@@ -48,13 +51,34 @@
                         <td>
                             {{ plan.sheetno }}
                         </td>
+                        <td>
+                            {% set apnostring = '' %}
+                            {% for apno in plan.apnos %}
+                                {% set apnostring = apnostring + apno[0]|string + ', ' %}
+                            {% endfor %}
+                            {{ apnostring }}
+                        </td>
                     </tr>
                 </table>
+
+                {% if plan.apnos %}
+                    <h4 class="title">AP Numbers Linked to this Plan</h3>
+                    <table class="table" id="apno-table">
+                        <th>AP Numbers</th>
+                        {% for apno in plan.apnos %}
+                            <tr>
+                                <td>
+                                    {{ apno[0] }}
+                                </td>
+                            </tr>
+                        {% endfor %}
+                    </table>
+                {% endif %}
             {% endfor %}
     {% endif %}
     <h1 class="title">Search for Plans</h1>
 
-    <form action="{{ url_for('search') }}" method="post">
+    <form action="{{ url_for('search') }}" method="post" style="margin-bottom: 50px;">
 
         <div class="form-group" id="search-form">
             <div>
