Finish search page

--- a/static/styles.css
+++ b/static/styles.css
@@ -82,6 +82,17 @@
     }
 }
 
+.confirm-plan-table-container {
+    width: 65%;
+    margin: auto;
+    margin-bottom: 40px;
+    padding: 20px;
+    border-style: solid;
+    text-align: center;
+}
+
+
+
 /* Flash messages */
 
 .flash { 
@@ -164,16 +175,9 @@
     margin: auto;
 }
 
-#plan-table {
-    width: 60%;
-    margin: auto;
-    text-align: center;
-}
-
 #apno-table {
     width: 20%;
     margin: auto;
-    margin-bottom: 40px;
     text-align: center;
 }
 
