--- a/templates/confirm.html
+++ b/templates/confirm.html
@@ -4,7 +4,7 @@
 
 <div class="confirm-container">
 
-    <h2 class="title">Please confirm the AP Numbers below match the addresses</h2>
+    <h2 class="title">Please confirm the Addresses Below Match the AP Numbers</h2>
 
     <table class="table" id="confirm-table">
         <th>AP Number</th>
