--- a/templates/form.html
+++ b/templates/form.html
@@ -60,6 +60,13 @@
             <input name="sheet-number-input" type="number" min="0" max="10000" step="1" value="1"/>
         </div>
 
+        <div class="form-group">
+            <div>
+                <label for="comments-input" class="form-label">Comments</label>
+            </div>
+            <input name="comments-input" type="text"/>
+        </div>
+
         <div class="pull-right">
             <button class="btn btn-secondary submit-button">
                 <span>Submit</span>
