--- a/templates/search.html
+++ b/templates/search.html
@@ -41,6 +41,7 @@
                         <th>Package</th>
                         <th>Location</th>
                         <th>Number of Sheets</th>
+                        <th>Comments</th>
                         <tr>
                             <td>
                                 {{ plan.package|capitalize }}
@@ -50,6 +51,9 @@
                             </td>
                             <td>
                                 {{ plan.sheetno }}
+                            </td>
+                            <td>
+                                {{ plan.comments }}
                             </td>
                         </tr>
                     </table>
