Start on edit page
Rework to allow for plans to be edited. Required a database redesign and will require a lot of testing to ensure bugs were not created.

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,13 +3,13 @@
 {% block content %}
     
     <div class="index-container">
-        <a href="{{ url_for('search') }}">
+        <a href="{{ url_for('plans') }}">
             <div class="index-button">
                 <div>
                     <i class="fa fa-address-book fa-5x" aria-hidden="true"></i>
                 </div>
                 <div>
-                    <h2>Search for a Plan</h2>
+                    <h2>Views Plan</h2>
                 </div>
             </div>
         </a>
