--- a/static/styles.css
+++ b/static/styles.css
@@ -38,6 +38,23 @@
 }
 
 @media (min-width: 400px) {
+    .plans-container {
+      width: 65%;
+      padding: 0;
+      margin: auto;
+      padding-bottom: 50px;
+    }
+}
+  
+@media (min-width: 550px) {
+    .plans-container {
+      width: 60%;
+      margin: auto;
+      padding-bottom: 50px;
+    }
+}
+
+@media (min-width: 400px) {
     .form-container {
       width: 45%;
       padding: 0;
@@ -90,8 +107,6 @@
     border-style: solid;
     text-align: center;
 }
-
-
 
 /* Flash messages */
 
@@ -181,7 +196,7 @@
     text-align: center;
 }
 
-/* Form Page */
+/* Form and Edit Pages */
 .form-label {
     display: inline-block;
 }
