--- a/templates/edit.html
+++ b/templates/edit.html
@@ -1,12 +1,16 @@
 {% extends "base.html" %}
 
+{% block assets %}
+<script src="{{ url_for('static', filename='form.js') }}"></script>
+{% endblock %}
+
 {% block content %}
 
-<div class="edit-container">
+<div class="form-container">
 
     <h1 class="title">Edit Plan {{ plan.id }}</h1>
 
-    <form action="{{ url_for('form') }}" method="post">
+    <form action="{{ url_for('edit', plan_id=plan.id) }}" method="post">
 
         <div class="form-group">
             <div>
@@ -17,9 +21,11 @@
                 </div>
             </div>
             <div id="ap-number-input-list">
-                <div id="ap-number-input">
-                    <input type="text" name="apno-input">
-                </div>
+                {% for apno in apnos %}
+                    <div id="ap-number-input">
+                        <input type="text" name="apno-input" value="{{ apno[0] }}">
+                    </div>
+                {% endfor %}
             </div>
         </div>
 
@@ -29,8 +35,13 @@
                 <span class="required-label form-label">(required)</span>
             </div>
             <select name="package-input" id="package-input">
+                {% if plan.package == "roll" %}
+                    <option value="roll" {% if plan.package == "roll" %} selected{% endif %}>Roll</option>
+                    <option value="flat" {% if plan.package == "flat" %} selected{% endif %}>Flat</option>
+                {% else %}
                 <option value="roll">Roll</option>
-                <option value="flat">Flat</option>
+                <option selected value="flat">Flat</option>
+                {% endif %}
             </select>
         </div>
 
@@ -40,27 +51,23 @@
                 <span class="required-label form-label">(required)</span>
             </div>
             <select name="location-input" id="location-input">
-                <option value="bins">Bins</option>
-                <option value="large-plan">Large Plan</option>
-                <option value="zoning">Zoning</option>
-                <option value="electrical">Electrical</option>
-                <option value="plumbing">Plumbing</option>
+                <option value="bins" {% if plan.location == "bins" %} selected{% endif %}>Bins</option>
+                <option value="large-plan" {% if plan.location == "large-plan" %} selected{% endif %}>Large Plan</option>
+                <option value="zoning" {% if plan.location == "zoning" %} selected{% endif %}>Zoning</option>
+                <option value="electrical" {% if plan.location == "electrical" %} selected{% endif %}>Electrical</option>
+                <option value="plumbing" {% if plan.location == "plumbing" %} selected{% endif %}>Plumbing</option>
             </select>
-        </div>
-
-        <div class="form-group">
-            <div>
-                <label for="sheet-number-input" class="form-label">Number of Sheets</label>
-                <span class="required-label form-label">(required)</span>
-            </div>
-            <input name="sheet-number-input" type="number" min="0" max="10000" step="1" value="1"/>
         </div>
 
         <div class="form-group">
             <div>
                 <label for="comments-input" class="form-label">Comments</label>
             </div>
-            <input name="comments-input" type="text"/>
+            {% if plan.comments == None %}
+            <input name="comments-input" type="text" value=""/>
+            {% else %}
+            <input name="comments-input" type="text" value="{{ plan.comments }}"/>
+            {% endif %}
         </div>
 
         <div class="pull-right">
