--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
                     <i class="fa fa-address-book fa-5x" aria-hidden="true"></i>
                 </div>
                 <div>
-                    <h2>Views Plan</h2>
+                    <h2>View Plans</h2>
                 </div>
             </div>
         </a>
