Add delete button for apno inputs

--- a/static/styles.css
+++ b/static/styles.css
@@ -204,4 +204,10 @@
 #add-apno-button {
     cursor: pointer;
     float: right;
+    margin-right: 5px;
+}
+
+#delete-apno-button {
+    cursor: pointer;
+    float: right;
 }
