--- a/templates/edit.html
+++ b/templates/edit.html
@@ -16,6 +16,9 @@
             <div>
                 <label for="ap-number-input" class="form-label" >AP Number</label>
                 <span class="required-label form-label">(required, click the add button to enter multiple)</span>
+                <div id="delete-apno-button" class="form-label">
+                    <i class="fa fa-minus-circle fa-lg" aria-hidden="true"></i>
+                </div>
                 <div id="add-apno-button" class="form-label">
                     <i class="fa fa-plus-circle fa-lg" aria-hidden="true"></i>
                 </div>
