Add search page back in

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,16 @@
                 </div>
             </div>
         </a>
+        <a href="{{ url_for('search') }}">
+            <div class="index-button">
+                <div>
+                    <i class="fa fa-search-plus fa-5x" aria-hidden="true"></i>
+                </div>
+                <div>
+                    <h2>Search By AP Number</h2>
+                </div>
+            </div>
+        </a>
         <a href="{{ url_for('form') }}">
             <div class="index-button">
                 <div>
