Remove old text on plans.html

--- a/templates/plans.html
+++ b/templates/plans.html
@@ -6,6 +6,8 @@
 
     <h1 class="title">View Plans</h1>
 
+    <h5 class="title">(Click Edit to see AP Numbers Associated with a Plan)</h5>
+
     <div class="plans-table-container">
         <table class="table" id="plan-table">
             <th>Plan ID</th>
