Add home button and fix plan id on plans page

--- a/templates/base.html
+++ b/templates/base.html
@@ -31,12 +31,15 @@
           <img src="https://standards.phila.gov/img/logo/city-of-philadelphia-yellow-white.png" alt="City of Philadelphia">
         </a>
         <div class="app-divide"></div>
-          <div class="page-title-container">
-            <a href="{{ url_for('index') }}">
-              <h1 class="page-title">Permit Plan Form</h1>
-              <h2 class="page-subtitle">For Internal Use Only</h2>
-            </a>
-          </div>
+        <div class="page-title-container">
+          <a href="{{ url_for('index') }}">
+            <h1 class="page-title">Permit Plan Form</h1>
+            <h2 class="page-subtitle">For Internal Use Only</h2>
+          </a>
+        </div>
+        <div class="app-buttons">
+            <a href="{{ url_for('index') }}" class="button">Home</a>
+        </div>
       </div>
     </div>
   </header>
