--- a/templates/plans.html
+++ b/templates/plans.html
@@ -21,7 +21,7 @@
             {% for plan in plans %}
             <tr>
                 <td>
-                    {{ loop.index }}
+                    {{ plan.id }}
                 </td>
                 <td>
                     {{ plan.package|capitalize }}
