--- a/templates/base.html
+++ b/templates/base.html
@@ -45,6 +45,7 @@
   </header>
 
   <main id="main">
+    <noscript>Your browser does not have JavaScript enabled. In order to use this web application please update update to a modern web browser or enable JavaScript.</noscript>
     {% for message in get_flashed_messages() %}
         <div class="flash">{{ message }}</div>
     {% endfor %}
