--- a/templates/base.html
+++ b/templates/base.html
@@ -45,7 +45,10 @@
   </header>
 
   <main id="main">
-    <noscript>Your browser does not have JavaScript enabled. In order to use this web application please update update to a modern web browser or enable JavaScript.</noscript>
+    <div class="flash"> 
+        <strong>Your browser does not have JavaScript enabled. Please enable JavaScript for this site to work properly.</strong>
+    </div>
+    <noscript></noscript>
     {% for message in get_flashed_messages() %}
         <div class="flash">{{ message }}</div>
     {% endfor %}
