--- a/li_permit_plan_form/templates/edit.html
+++ b/li_permit_plan_form/templates/edit.html
@@ -10,7 +10,7 @@
 
     <h1 class="title">Edit Plan {{ plan.id }}</h1>
 
-    <form action="{{ url_for('edit', plan_id=plan.id) }}" method="post">
+    <form action="{{ url_for('plans.edit', plan_id=plan.id) }}" method="post">
 
         <div class="form-group">
             <div>
@@ -78,7 +78,7 @@
             </button>
     </form>
     
-            <form action="{{ url_for('delete', plan_id=plan.id) }}" method="post" class="confirm-btn-inner">
+            <form action="{{ url_for('plans.delete', plan_id=plan.id) }}" method="post" class="confirm-btn-inner">
                 <button class="btn btn-decline submit-button">
                     <span>Delete Plan</span>
                 </button>
