--- a/li_permit_plan_form/templates/index.html
+++ b/li_permit_plan_form/templates/index.html
@@ -3,7 +3,7 @@
 {% block content %}
     
     <div class="index-container">
-        <a href="{{ url_for('plans') }}">
+        <a href="{{ url_for('plans.plans') }}">
             <div class="index-button">
                 <div>
                     <i class="fa fa-address-book fa-5x" aria-hidden="true"></i>
@@ -13,7 +13,7 @@
                 </div>
             </div>
         </a>
-        <a href="{{ url_for('search') }}">
+        <a href="{{ url_for('search.search') }}">
             <div class="index-button">
                 <div>
                     <i class="fa fa-search-plus fa-5x" aria-hidden="true"></i>
@@ -23,7 +23,7 @@
                 </div>
             </div>
         </a>
-        <a href="{{ url_for('form') }}">
+        <a href="{{ url_for('form.form') }}">
             <div class="index-button">
                 <div>
                     <i class="fa fa-plus-square-o fa-5x" aria-hidden="true"></i>
