--- a/li_permit_plan_form/templates/plans.html
+++ b/li_permit_plan_form/templates/plans.html
@@ -52,7 +52,7 @@
                     {% endif %}
                 </td>
                 <td>
-                    <a href="{{ url_for('edit', plan_id=plan.id) }}">Edit</a>
+                    <a href="{{ url_for('plans.edit', plan_id=plan.id) }}">Edit</a>
                 </td>
             </tr>
             {% endfor %}
