--- a/li_permit_plan_form/templates/form.html
+++ b/li_permit_plan_form/templates/form.html
@@ -10,7 +10,7 @@
 
     <h1 class="title">Enter a Plan</h1>
 
-    <form action="{{ url_for('form') }}" method="post">
+    <form action="{{ url_for('form.form') }}" method="post">
 
         <div class="form-group">
             <div>
