Change Examiner field to report the examiner who approved the application instead of the examiner it's assigned to

--- a/li_permit_plan_form/templates/search.html
+++ b/li_permit_plan_form/templates/search.html
@@ -11,7 +11,7 @@
             <th>AP Number</th>
             <th>Address</th>
             <th>AP Type</th>
-            <th>Examiner</th>
+            <th>Examiner Who Approved Application</th>
             <th>Date Advanced to Plans Reviewed Stage</th>
             <tr>
                 <td>
