--- a/li_permit_plan_form/templates/index.html
+++ b/li_permit_plan_form/templates/index.html
@@ -19,7 +19,7 @@
                     <i class="fa fa-search-plus fa-5x" aria-hidden="true"></i>
                 </div>
                 <div>
-                    <h2>Search By AP Number</h2>
+                    <h2>Search By AP/Permit Number</h2>
                 </div>
             </div>
         </a>
