--- a/li_permit_plan_form/templates/confirm.html
+++ b/li_permit_plan_form/templates/confirm.html
@@ -4,10 +4,10 @@
 
 <div class="confirm-container">
 
-    <h2 class="title">Please confirm the Addresses Below Match the AP Numbers</h2>
+    <h2 class="title">Please confirm the Addresses Below Match the AP/Permit Numbers</h2>
 
     <table class="table" id="confirm-table">
-        <th>AP Number</th>
+        <th>AP/Permit Number</th>
         <th>Address</th>
         {% for apno, address in session['apnos'].items() %}
             <tr>
