--- a/li_permit_plan_form/templates/edit.html
+++ b/li_permit_plan_form/templates/edit.html
@@ -14,7 +14,8 @@
 
         <div class="form-group">
             <div>
-                <label for="ap-number-input" class="form-label" >AP Number</label>
+                <label for="ap-number-input" class="form-label" >AP/Permit Number</label>
+                <label for="ap-number-input" class="form-label" >AP/Permit Number</label>
                 <span class="required-label form-label">(required, click the add button to enter multiple)</span>
                 <div id="delete-apno-button" class="form-label">
                     <i class="fa fa-minus-circle fa-lg" aria-hidden="true"></i>
