--- a/li_permit_plan_form/templates/plans.html
+++ b/li_permit_plan_form/templates/plans.html
@@ -6,7 +6,7 @@
 
     <h1 class="title">View Plans</h1>
 
-    <h5 class="title">(Click Edit to see AP Numbers Associated with a Plan)</h5>
+    <h5 class="title">(Click Edit to see AP/Permit Numbers Associated with a Plan)</h5>
 
     <div class="plans-table-container">
         <table class="table" id="plan-table">
